--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <body>
   <div class="cont">
     <div class="paper">
+      <div class="welcome">
+        
+        <h3><u>Welcome to My Portfolio</u></h3>
+        <div><font color='purple'>Hi, I'm</font><br><h1><font color='aliceblue'>IBANZE Miracle</font></h1>a passionate Front-End Web Developer.
+        <a href="#projects" class="button">View My Work</a></div>
+        <button class="start">Start</button>
+      </div>
       <div class="main-right">
         <div class="front-page front">
           <div class="main-part">
@@ -28,10 +35,6 @@
               <li>Css</li>
               <li>JavaScript</li>
             </ul>
-														<h1>Welcome to My Portfolio</h1>
-								<img src="profile.jpg" alt="Profile Picture">
-								<p>Hi, I'm IBANZE Miracle, a passionate Front-End Web Developer.</p>
-								<a href="#projects" class="button">View My Work</a>
 
           </div>
           <button class="Back">Back</button>
